fixing keyboard issue on iphone ScheduleTool another try.

--- a/app/globals.css
+++ b/app/globals.css
@@ -51,7 +51,9 @@
 
    
 
-  
+  body.keyboard {
+    height: calc(100% + 500px); /* add padding for keyboard */
+}
 
   
 }
